--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nebula X</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1 class="title">Nebula X</h1>
 
+    <!-- Video Tutorial Section -->
+    <section class="section">
+      <h2>Video Tutorial</h2>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <!-- Update Log Section -->
+    <section class="section">
+      <h2>Update Log</h2>
+      <ul class="update-log">
+        <li><strong>v1.0.0</strong> - Initial release of Nebula X.</li>
+        <li><strong>v1.0.1</strong> - Added animations and hover effects.</li>
+        <li><strong>v1.0.2</strong> - Improved UI and fixed bugs.</li>
+      </ul>
+    </section>
+
+    <!-- Textbox and Buttons Section -->
+    <section class="section">
+      <h2>Interactive Section</h2>
+      <div class="interactive-container">
+        <input type="text" id="textbox" value="HelloWorld" readonly>
+        <button id="copyButton">Copy Text</button>
+        <button id="consoleButton">Print to Console</button>
+      </div>
+    </section>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
