--- a/index.html
+++ b/index.html
@@ -4,41 +4,123 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nebula X</title>
-  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+    .gradient-bg {
+      background: linear-gradient(135deg, #2E026D 0%, #15162c 50%, #0a0a23 100%);
+    }
+    .glass-effect {
+      background: rgba(40, 40, 40, 0.25);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+    }
+    .particle {
+      position: absolute;
+      background: radial-gradient(circle, #BB86FC 20%, transparent 70%);
+      border-radius: 50%;
+      pointer-events: none;
+    }
+  </style>
 </head>
-<body>
-  <div class="container">
-    <h1 class="title">Nebula X</h1>
+<body class="gradient-bg min-h-screen overflow-x-hidden">
+  <!-- Animated Background Particles -->
+  <div id="particles"></div>
 
-    <!-- Video Tutorial Section -->
-    <section class="section">
-      <h2>Video Tutorial</h2>
-      <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="container mx-auto px-4 py-8 relative z-10">
+    <!-- Header with Floating Animation -->
+    <div class="text-center mb-16 animate-float">
+      <h1 class="text-6xl font-bold bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent mb-4">
+        Nebula X
+      </h1>
+      <p class="text-purple-200 text-xl">Next Generation Development Platform</p>
+    </div>
+
+    <!-- Video Section with Hover Effect -->
+    <section class="glass-effect rounded-2xl p-6 mb-12 transform transition-all duration-300 hover:scale-[1.02] hover:shadow-2xl">
+      <h2 class="text-3xl font-semibold text-purple-300 mb-6">🌟 Video Tutorial</h2>
+      <div class="aspect-w-16 aspect-h-9 rounded-xl overflow-hidden border-2 border-purple-500/30">
+        <iframe 
+          class="w-full h-full"
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
       </div>
     </section>
 
-    <!-- Update Log Section -->
-    <section class="section">
-      <h2>Update Log</h2>
-      <ul class="update-log">
-        <li><strong>v1.0.0</strong> - Initial release of Nebula X.</li>
-        <li><strong>v1.0.1</strong> - Added animations and hover effects.</li>
-        <li><strong>v1.0.2</strong> - Improved UI and fixed bugs.</li>
-      </ul>
+    <!-- Update Log with Timeline Effect -->
+    <section class="glass-effect rounded-2xl p-6 mb-12 transform transition-all duration-300 hover:scale-[1.02]">
+      <h2 class="text-3xl font-semibold text-purple-300 mb-6">📜 Update Log</h2>
+      <div class="space-y-6 relative pl-8 border-l-2 border-purple-500/30">
+        <div class="relative group">
+          <div class="absolute w-4 h-4 bg-purple-500 rounded-full -left-[25px] top-4 ring-4 ring-purple-500/30 transition-transform group-hover:scale-125"></div>
+          <div class="p-6 rounded-xl bg-gradient-to-br from-purple-900/50 to-pink-900/30 transition-all duration-300 group-hover:translate-x-4">
+            <h3 class="text-xl font-medium text-purple-300">v1.1.0 - Cosmic Update</h3>
+            <p class="text-purple-100 mt-2">Added quantum processing module and nebula visualization</p>
+          </div>
+        </div>
+        <!-- Add more log items here -->
+      </div>
     </section>
 
-    <!-- Textbox and Buttons Section -->
-    <section class="section">
-      <h2>Interactive Section</h2>
-      <div class="interactive-container">
-        <input type="text" id="textbox" value="HelloWorld" readonly>
-        <button id="copyButton">Copy Text</button>
-        <button id="consoleButton">Print to Console</button>
+    <!-- Interactive Section with Glow Effect -->
+    <section class="glass-effect rounded-2xl p-6 mb-12">
+      <h2 class="text-3xl font-semibold text-purple-300 mb-6">⚡ Interactive Tools</h2>
+      <div class="flex flex-col space-y-6 md:flex-row md:space-y-0 md:space-x-6">
+        <div class="relative flex-1 group">
+          <input 
+            type="text" 
+            value="HelloWorld" 
+            readonly
+            class="w-full p-4 bg-purple-900/30 rounded-lg border-2 border-purple-500/30 focus:outline-none focus:border-purple-400 text-purple-100 transition-all duration-300 group-hover:shadow-glow">
+        </div>
+        <button 
+          onclick="copyText()"
+          class="px-8 py-4 bg-purple-600 hover:bg-purple-500 text-white rounded-lg font-medium transition-all duration-300 transform hover:scale-105 hover:shadow-glow">
+          📋 Copy Code
+        </button>
+        <button 
+          onclick="console.log('Hello World')"
+          class="px-8 py-4 bg-pink-600 hover:bg-pink-500 text-white rounded-lg font-medium transition-all duration-300 transform hover:scale-105 hover:shadow-glow">
+          🖨️ Print to Console
+        </button>
       </div>
     </section>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    // Particle Animation
+    function createParticles() {
+      const container = document.getElementById('particles');
+      for (let i = 0; i < 50; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.width = Math.random() * 5 + 2 + 'px';
+        particle.style.height = particle.style.width;
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.top = Math.random() * 100 + '%';
+        container.appendChild(particle);
+      }
+    }
+    createParticles();
+
+    // Copy Function with Ripple Effect
+    function copyText() {
+      navigator.clipboard.writeText('HelloWorld');
+      const btn = event.target;
+      btn.classList.add('animate-pulse');
+      setTimeout(() => btn.classList.remove('animate-pulse'), 300);
+    }
+
+    // Floating Animation
+    document.querySelectorAll('.animate-float').forEach(el => {
+      el.style.animation = 'float 6s ease-in-out infinite';
+    });
+  </script>
 </body>
 </html>
