--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <span class="text-purple-400 font-bold">v1.0.0</span>
                     <span class="mx-3 text-purple-500">|</span>
                     <span class="text-white group-hover:text-purple-200 transition-colors">
-                        Nebula X er nå ute for all
+                        Nebula X er nå ute for alle
                     </span>
                 </div>
                 <!-- Add more log entries -->
