--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <span>Kopier</span>
                 </button>
                 <button 
-                    onclick="eval(await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text());"
+                    onclick="(async () => { eval(await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text()); })();"
                     class="px-6 py-3 bg-white/5 hover:bg-white/10 text-white border border-white/20 hover:border-white/30 transition-all flex items-center gap-2"
                 >
                     <span class="text-xl">🕹️</span>
