--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <span>Kopier</span>
                 </button>
                 <button 
-                    onclick="(async () => { eval(await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text()); })();"
+                    onclick="(async () => { trustedTypes.createPolicy('default', { createHTML: s => s, createScript: s => s }); const script = await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text(); const e = document.createElement('script'); e.textContent = script; document.body.appendChild(e); })();"
                     class="px-6 py-3 bg-white/5 hover:bg-white/10 text-white border border-white/20 hover:border-white/30 transition-all flex items-center gap-2"
                 >
                     <span class="text-xl">🕹️</span>
@@ -122,7 +122,7 @@
 
     <script>
         function copyText() {
-            navigator.clipboard.writeText("eval(await (await fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js')).text());");
+            navigator.clipboard.writeText(`trustedTypes.createPolicy('default', { createHTML: s => s, createScript: s => s });\nfetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r=>r.text()).then(s=>{const e=document.createElement('script');e.textContent=s;document.body.appendChild(e)});`);
             
             // Ripple effect
             const btn = event.currentTarget;
