--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
             <div class="p-4 space-y-4">
                 <div class="flex items-center p-3 bg-black/30 hover:bg-purple-900/20 transition-all group">
                     <div class="w-3 h-3 bg-purple-400 mr-3 animate-pulse"></div>
-                    <span class="text-purple-400 font-bold">v1.0.0</span>
+                    <span class="text-purple-400 font-bold">v1.0.1</span>
                     <span class="mx-3 text-purple-500">|</span>
                     <span class="text-white group-hover:text-purple-200 transition-colors">
-                        Nebula X er nå ute for alle
+                        lagt til AI (Gemini 2.0)
+                        Fikset mest av problemene
                     </span>
                 </div>
                 <!-- Add more log entries -->
