--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                     <span class="text-purple-400 font-bold">v1.0.1</span>
                     <span class="mx-3 text-purple-500">|</span>
                     <span class="text-white group-hover:text-purple-200 transition-colors">
-                        lagt til AI (Gemini 2.0)
-                        Fikset mest av problemene
+                        lagt til AI (Gemini 2.0) | Fikset de fleste problemene med Nebula X
                     </span>
                 </div>
                 <!-- Add more log entries -->
