--- a/index.html
+++ b/index.html
@@ -72,23 +72,26 @@
             </div>
         </section>
 
-        <!-- Update Log -->
-        <section class="cyber-border rounded-lg mb-12 bg-black/50">
-            <div class="p-4 border-b border-purple-500/30">
-                <h2 class="text-2xl text-purple-400">[ oppdateringer ]</h2>
+<section class="cyber-border rounded-lg mb-12 bg-black/50">
+    <div class="p-4 border-b border-purple-500/30">
+        <h2 class="text-2xl text-purple-400">[ oppdateringer ]</h2>
+    </div>
+    <div class="p-4 space-y-4">
+        <div class="flex flex-col items-start p-3 bg-black/30 hover:bg-purple-900/20 transition-all group">
+            <div class="flex items-center">
+                <div class="w-3 h-3 bg-purple-400 mr-3 animate-pulse"></div>
+                <span class="text-purple-400 font-bold">v1.0.1</span>
+                <span class="mx-3 text-purple-500">|</span>
             </div>
-            <div class="p-4 space-y-4">
-                <div class="flex items-center p-3 bg-black/30 hover:bg-purple-900/20 transition-all group">
-                    <div class="w-3 h-3 bg-purple-400 mr-3 animate-pulse"></div>
-                    <span class="text-purple-400 font-bold">v1.0.1</span>
-                    <span class="mx-3 text-purple-500">|</span>
-                    <span class="text-white group-hover:text-purple-200 transition-colors">
-                        lagt til AI (Gemini 2.0) | Fikset de fleste problemene med Nebula X
-                    </span>
-                </div>
-                <!-- Add more log entries -->
-            </div>
-        </section>
+            <span class="text-white group-hover:text-purple-200 transition-colors mt-2">
+                lagt til AI (Gemini 2.0)<br>
+                Lagt til Anti-XSS bypass (Trusted Types)<br>
+                Fikset de fleste problemene med Nebula X (css)
+            </span>
+        </div>
+        <!-- Add more log entries -->
+    </div>
+</section>
 
         <!-- Interactive Section -->
         <section class="cyber-border rounded-lg bg-black/50">
