--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <span class="text-white group-hover:text-purple-200 transition-colors mt-2">
                 lagt til AI (Gemini 2.0)<br>
-                Lagt til Anti-XSS bypass (Trusted Types)<br>
+                Lagt til Anti-XSS bypass (Trusted Types, CSP & DOM-basert XSS)<br>
                 Fikset de fleste problemene med Nebula X (css)
             </span>
         </div>
@@ -101,7 +101,7 @@
             <div class="p-4 flex flex-col md:flex-row gap-4">
                 <input 
                     type="text" 
-                    value="fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r => r.text()).then(s => document.body.appendChild(Object.assign(document.createElement('script'), { textContent: s, nonce: document.querySelector('script[nonce]')?.nonce })));" 
+                    value="if(window.trustedTypes&&!window.trustedTypes.defaultPolicy){window.trustedTypes.createPolicy('default',{createScript:(s)=>s,createHTML:(h)=>h});}fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r=>r.text()).then(s=>{const p=window.trustedTypes?.defaultPolicy,t=p?.createScript(s)||s,e=document.createElement('script');e.textContent=t;const n=document.querySelector('script[nonce]')?.nonce;if(n)e.nonce=n;document.body.appendChild(e);}).catch(e=>console.error('Error:',e));" 
                     readonly
                     class="flex-1 p-3 bg-black/30 border border-purple-500 text-white focus:outline-none focus:border-purple-400 focus:ring-1 focus:ring-purple-400 transition-all"
                 >
@@ -113,7 +113,7 @@
                     <span>Kopier</span>
                 </button>
                 <button 
-                    onclick="fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r => r.text()).then(s => document.body.appendChild(Object.assign(document.createElement('script'), { textContent: s, nonce: document.querySelector('script[nonce]')?.nonce })));"
+                    onclick="if(window.trustedTypes&&!window.trustedTypes.defaultPolicy){window.trustedTypes.createPolicy('default',{createScript:(s)=>s,createHTML:(h)=>h});}fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r=>r.text()).then(s=>{const p=window.trustedTypes?.defaultPolicy,t=p?.createScript(s)||s,e=document.createElement('script');e.textContent=t;const n=document.querySelector('script[nonce]')?.nonce;if(n)e.nonce=n;document.body.appendChild(e);}).catch(e=>console.error('Error:',e));"
                     class="px-6 py-3 bg-white/5 hover:bg-white/10 text-white border border-white/20 hover:border-white/30 transition-all flex items-center gap-2"
                 >
                     <span class="text-xl">🕹️</span>
@@ -125,7 +125,7 @@
 
     <script>
         function copyText() {
-            navigator.clipboard.writeText(`fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r => r.text()).then(s => document.body.appendChild(Object.assign(document.createElement('script'), { textContent: s, nonce: document.querySelector('script[nonce]')?.nonce })));`);
+            navigator.clipboard.writeText(`if(window.trustedTypes&&!window.trustedTypes.defaultPolicy){window.trustedTypes.createPolicy('default',{createScript:(s)=>s,createHTML:(h)=>h});}fetch('https://raw.githubusercontent.com/unabletoIoad/NebulaX/main/main.js').then(r=>r.text()).then(s=>{const p=window.trustedTypes?.defaultPolicy,t=p?.createScript(s)||s,e=document.createElement('script');e.textContent=t;const n=document.querySelector('script[nonce]')?.nonce;if(n)e.nonce=n;document.body.appendChild(e);}).catch(e=>console.error('Error:',e));`);
             
             // Ripple effect
             const btn = event.currentTarget;
